<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Modern Rotation Control</string>
    <string name="title_activity_main">Modern Rotation Control</string>
    <string name="service_rotation_title">Rotation Control Service</string>
    <string name="service_tile_title">Rotation Control Tile Service</string>
    <string name="service_accessibility_title">Rotation Control Application Monitoring Service</string>
    <string name="tile_title">Rotation Control</string>
    <string name="tile_active">Active</string>
    <string name="tile_inactive">Inactive</string>
    <string name="tile_with_guard">(with Guard)</string>
    <string name="tile_with_presets">(with Presets)</string>
    <string name="mode_deduce">Deduce from current orientation</string>
    <string name="button_guard">Guard</string>
    <string name="button_guard_description">Force the rotation of the screen.</string>
    <string name="mode_auto">Auto</string>
    <string name="mode_auto_description">Rotate based on the screen orientation.</string>
    <string name="mode_portrait">Portrait</string>
    <string name="mode_portrait_description">Force portrait orientation.</string>
    <string name="mode_portrait_reverse">Portrait (Reverse)</string>
    <string name="mode_portrait_reverse_description">Force reverse portrait orientation.</string>
    <string name="mode_portrait_sensor">Portrait (Sensor)</string>
    <string name="mode_portrait_sensor_description">Rotate based on the screen orientation, but limit to portrait modes.\nReverse doesn\'t work properly on some devices.</string>
    <string name="mode_landscape">Landscape</string>
    <string name="mode_landscape_description">Force landscape orientation.</string>
    <string name="mode_landscape_reverse">Landscape (Reverse)</string>
    <string name="mode_landscape_reverse_description">Force reverse landscape orientation.</string>
    <string name="mode_landscape_sensor">Landscape (Sensor)</string>
    <string name="mode_landscape_sensor_description">Rotate based on the screen orientation, but limit to landscape modes.</string>
    <string name="button_refresh">Refresh</string>
    <string name="button_refresh_description">Simulate a forced rotation to fix UI issues.</string>
    <string name="button_power">Turn On/Off</string>
    <string name="button_power_description">Quickly start or stop the rotation service.</string>
    <string name="mode_default">Default (use the global mode)</string>
    <string name="mode_keep_current">Keep current mode (don\'t change anything)</string>
    <string name="stopping_service_soon">Stopping service soon...</string>
    <string name="settings_control_header">Control</string>
    <string name="settings_recommendations_header">Recommendations</string>
    <string name="settings_recommendations_key">recommendations_category</string>
    <string name="settings_header">Settings</string>
    <string name="settings_tile_title">Tile</string>
    <string name="settings_tile_description">The optimal way to use the application.</string>
    <string name="settings_notification_title">Notification</string>
    <string name="settings_notification_description">For old users who do not want to use the Tile.</string>
    <string name="settings_suggestions_key">settings_suggestions</string>
    <string name="settings_suggestions_title">Suggestions</string>
    <string name="settings_suggestions_description">Detect your intention to change the rotation.</string>
    <string name="settings_suggestions_description_not_available">Feature not available for your Android version.</string>
    <string name="settings_auto_lock_header">Auto Lock</string>
    <string name="settings_auto_lock_header_description">Lock the rotation after some time. Timer is reset when the device is rotated.</string>
    <string name="settings_other_title">Other</string>
    <string name="settings_other_description">Less relevant settings.</string>
    <string name="install_tile_key">install_tile</string>
    <string name="install_tile_title">Add the Tile</string>
    <string name="install_tile_description">Click here to add the tile to the Quick Settings.</string>
    <string name="battery_optimization_key">battery_optimization</string>
    <string name="battery_optimization_title">Exclude from Battery Optimization</string>
    <string name="battery_optimization_description">Click here to ensure that the application is never stopped.</string>
    <string name="configure_presets_key">configure_presets</string>
    <string name="configure_presets_title">Configure per Application</string>
    <string name="configure_presets_description">Set the mode depending on the application (when switching to it). Accessibility permission is required, and must be re-allowed after each update.</string>
    <string name="start_control_key">start_control</string>
    <string name="start_control_title">Start controlling rotation</string>
    <string name="start_control_description">Start this application now.</string>
    <string name="guard_key">guard</string>
    <string name="guard_title">Prevent apps. from changing rotation</string>
    <string name="guard_description">This mode can prevent interaction with security prompts (e.g. APK install).</string>
    <string name="mode_key">mode</string>
    <string name="mode_title">Rotation mode</string>
    <string name="mode_description">Currently set to: %s</string>
    <string name="tile_click_behavior_key">tile_click_behavior</string>
    <string name="tile_click_behavior_title">Tile Click Behavior</string>
    <string name="tile_click_behavior_description">Change the behavior of the tile when tapped.\nCurrently set to: %s</string>
    <string name="close_dialog_on_click_key">close_dialog_on_click</string>
    <string name="close_dialog_on_click_title">Close Dialog on Click</string>
    <string name="close_dialog_on_click_description">Close the Modes dialog after selecting one.</string>
    <string name="tile_swap_buttons_direction_key">tile_swap_buttons_direction</string>
    <string name="tile_swap_buttons_direction_title">Swap buttons direction</string>
    <string name="tile_swap_buttons_direction_description_on">Disable it to make it better for right-handed people.</string>
    <string name="tile_swap_buttons_direction_description_off">Enable it to make it better for left-handed people.</string>
    <string name="tile_dialog_line_design_key">tile_dialog_line_design</string>
    <string name="tile_dialog_line_design_title">Show the buttons in a single line</string>
    <string name="tile_dialog_line_design_description_on">Disable to show the buttons as a pad.</string>
    <string name="tile_dialog_line_design_description_off">Enable to show the buttons as a line, like the notifications.</string>
    <string name="tile_buttons_key">tile_buttons</string>
    <string name="tile_buttons_title">Tile Mode Buttons</string>
    <string name="tile_buttons_description">Select which buttons to display.</string>
    <string name="show_notification_key">show_notification</string>
    <string name="show_notification_title">Show Notification</string>
    <string name="show_notification_description">Users of the Quick Settings tile probably don\'t have a need for it.</string>
    <string name="notification_buttons_key">notification_buttons</string>
    <string name="notification_buttons_title">Notification Mode Buttons</string>
    <string name="notification_buttons_description">Select which buttons to display.</string>
    <string name="buttons_at_least_one">At least one button must be selected.</string>
    <string name="suggestions_enabled_key">suggestions_enabled</string>
    <string name="suggestions_enabled_key_title">Enable rotation Suggestions</string>
    <string name="suggestions_enabled_key_description">Show a small icon to quickly apply a new rotation.</string>
    <string name="suggest_for_modes_key">suggest_for_modes</string>
    <string name="suggest_for_modes_title">Suggest for Modes</string>
    <string name="suggest_for_modes_description">Only specify some suggestions.</string>
    <string name="suggestion_expiration_key">suggestion_expiration</string>
    <string name="suggestion_expiration_title">Suggestion Expiration</string>
    <string name="suggestion_expiration_description">The delay (in milliseconds) after which the suggestion disappears.</string>
    <string name="suggestion_button_bigger_key">suggestion_button_bigger</string>
    <string name="suggestion_button_bigger_title">Make Button bigger</string>
    <string name="suggestion_button_bigger_description">Make the button bigger.</string>
    <string name="suggestion_swap_button_side_key">suggestion_swap_button_side</string>
    <string name="suggestion_swap_button_side_title">Swap button side</string>
    <string name="suggestion_swap_button_description_on">Disable it to make it better for right-handed people.</string>
    <string name="suggestion_swap_button_description_off">Enable it to make it better for left-handed people.</string>
    <string name="start_on_boot_key">start_on_boot</string>
    <string name="start_on_boot_title">Start on Boot</string>
    <string name="start_on_boot_description">Automatically start the service when the device is restarted.</string>
    <string name="refresh_on_unlock_key">refresh_on_unlock</string>
    <string name="refresh_on_unlock_title">Refresh on Unlock</string>
    <string name="refresh_on_unlock_description">Re-apply the current rotation mode when the device is unlocked.</string>
    <string name="refresh_mode_delay_key">refresh_mode_delay</string>
    <string name="refresh_mode_delay_title">Refresh Mode Delay</string>
    <string name="refresh_mode_delay_description">Wait a %s amount of time before restoring the original rotation mode.</string>
    <string name="delay_fast">Fast (0.2s)</string>
    <string name="delay_normal">Normal (0.6s)</string>
    <string name="delay_slow">Slow (1s)</string>
    <string name="auto_lock_key">auto_lock</string>
    <string name="auto_lock_title">Freeze rotation after some time</string>
    <string name="auto_lock_description">Automatically lock the mode that corresponds to the device orientation: %s</string>
    <string name="wait_disabled">Disabled</string>
    <string name="wait_15">after 15 seconds</string>
    <string name="wait_30">after 30 seconds</string>
    <string name="wait_60">after 1 minute</string>
    <string name="wait_120">after 2 minutes</string>
    <string name="auto_lock_trigger">Locked rotation mode to %s</string>
    <string name="auto_lock_mode_key">auto_lock_mode</string>
    <string name="auto_lock_mode_title">Only lock for a specific mode</string>
    <string name="auto_lock_mode_description">Set to the mode: %s</string>
    <string name="auto_lock_force_key">auto_lock_force</string>
    <string name="auto_lock_force_title">Force apply</string>
    <string name="auto_lock_force_description_on">Forcibly apply the rotation, ignoring the current rotation.</string>
    <string name="auto_lock_force_description_off">Wait until the current rotation matches the setting to lock it.</string>
    <string name="controls_notification_channel_name">Controls</string>
    <string name="service_notification_channel_name">Background Service</string>
    <string name="warning_notification_channel_name">Warnings and Alerts</string>
    <string name="about_header">About</string>
    <string name="view_on_github_key">view_on_github</string>
    <string name="view_on_github_title">View on GitHub</string>
    <string name="view_on_github_description">Read the source code, report an issue, or just star the repository.</string>
    <string name="open_source_licenses_key">open_source_licenses</string>
    <string name="open_source_licenses_title">Open source licenses</string>
    <string name="open_source_licenses_description">License details for open source software.</string>
</resources>