<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_control_header">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="@string/start_control_key"
            app:summary="@string/start_control_description"
            app:title="@string/start_control_title" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="@string/guard_key"
            app:summary="@string/guard_description"
            app:title="@string/guard_title" />

        <dev.caceresenzo.rotationcontrol.settings.preference.ListPreferenceWithDescription
            app:defaultValue="AUTO"
            app:entries="@array/rotation_mode_entries"
            app:entryDescriptions="@array/rotation_mode_descriptions"
            app:entryValues="@array/rotation_mode_values"
            app:iconSpaceReserved="false"
            app:key="@string/mode_key"
            app:summary="@string/mode_description"
            app:title="@string/mode_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="@string/settings_suggestions_key"
        app:title="@string/settings_suggestions_header">

        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/install_tile_key"
            app:summary="@string/install_tile_description"
            app:title="@string/install_tile_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/battery_optimization_key"
            app:summary="@string/battery_optimization_description"
            app:title="@string/battery_optimization_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_header">

        <Preference
            app:fragment="dev.caceresenzo.rotationcontrol.settings.GeneralSettingsFragment"
            app:iconSpaceReserved="false"
            app:summary="@string/settings_general_description"
            app:title="@string/settings_general_title" />

        <Preference
            app:fragment="dev.caceresenzo.rotationcontrol.settings.AutoLockSettingsFragment"
            app:iconSpaceReserved="false"
            app:summary="@string/settings_auto_lock_header_description"
            app:title="@string/settings_auto_lock_header" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/configure_presets_key"
            app:summary="@string/configure_presets_description"
            app:title="@string/configure_presets_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/about_header">

        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/view_on_github_key"
            app:summary="@string/view_on_github_description"
            app:title="@string/view_on_github_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/open_source_licenses_key"
            app:summary="@string/open_source_licenses_description"
            app:title="@string/open_source_licenses_title" />
    </PreferenceCategory>

</PreferenceScreen>