<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <dev.caceresenzo.rotationcontrol.settings.preference.ListPreferenceWithDescription
        app:defaultValue="SHOW_MODES_IF_CONTROLLING"
        app:entries="@array/tile_click_behavior_entries"
        app:entryDescriptions="@array/tile_click_behavior_descriptions"
        app:entryValues="@array/tile_click_behavior"
        app:iconSpaceReserved="false"
        app:key="@string/tile_click_behavior_key"
        app:summary="@string/tile_click_behavior_description"
        app:title="@string/tile_click_behavior_title" />

    <dev.caceresenzo.rotationcontrol.settings.preference.MultiSelectListPreferenceWithDescription
        app:defaultValue="@array/buttons_values"
        app:entries="@array/buttons_entries"
        app:entryDescriptions="@array/buttons_descriptions"
        app:entryIcons="@array/buttons_icons"
        app:entryValues="@array/buttons_values"
        app:iconSpaceReserved="false"
        app:key="@string/tile_buttons_key"
        app:summary="@string/tile_buttons_description"
        app:title="@string/tile_buttons_title" />

    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:key="@string/close_dialog_on_click_key"
        app:summary="@string/close_dialog_on_click_description"
        app:title="@string/close_dialog_on_click_title" />

    <SwitchPreferenceCompat
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:key="@string/tile_swap_buttons_direction_key"
        app:summaryOff="@string/tile_swap_buttons_direction_description_off"
        app:summaryOn="@string/tile_swap_buttons_direction_description_on"
        app:title="@string/tile_swap_buttons_direction_title" />

    <SwitchPreferenceCompat
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:key="@string/tile_dialog_line_design_key"
        app:summaryOff="@string/tile_dialog_line_design_description_off"
        app:summaryOn="@string/tile_dialog_line_design_description_on"
        app:title="@string/tile_dialog_line_design_title" />

</PreferenceScreen>