<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        app:defaultValue="0"
        app:entries="@array/auto_lock_entries"
        app:entryValues="@array/auto_lock_values"
        app:iconSpaceReserved="false"
        app:key="@string/auto_lock_key"
        app:summary="@string/auto_lock_description"
        app:title="@string/auto_lock_title" />

    <ListPreference
        app:defaultValue="AUTO"
        app:entries="@array/auto_lock_mode_entries"
        app:entryValues="@array/auto_lock_mode_values"
        app:iconSpaceReserved="false"
        app:key="@string/auto_lock_mode_key"
        app:summary="@string/auto_lock_mode_description"
        app:title="@string/auto_lock_mode_title" />

    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:key="@string/auto_lock_force_key"
        app:summaryOff="@string/auto_lock_force_description_off"
        app:summaryOn="@string/auto_lock_force_description_on"
        app:title="@string/auto_lock_force_title" />

</PreferenceScreen>